2011-02-01  Alan Modra  <amodra@gmail.com>

	Backport from mainline
	2010-12-20  Alan Modra  <amodra@gmail.com>
	PR ld/12001
	* ld-scripts/default-script2.d: Revert 2010-11-03 change.

	2010-12-05  H.J. Lu  <hongjiu.lu@intel.com>
	* ld-plugin/plugin-vis-1.d: Updated.

2010-11-25  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* ld-arm/arm-elf.exp (armeabitests): Replace --defsym argument in
	jump-reloc-veneers* tests with --section-start .text=0x8000.

2010-11-05  Dave Korn  <dave.korn.cygwin@gmail.com>

	* ld-plugin/plugin.exp (testobjfiles): Dont use HOSTING_CRT0.
	(testobjfiles_notext): Likewise.
	(libs): Don't use HOSTING_LIBS; fill with default symbol defs instead.
	* lib/ld-lib.exp (ld_simple_link_defsyms): Add cygming clause.

2010-11-05  Alan Modra  <amodra@gmail.com>

	* ld-elfvers/vers32c.dsym, * ld-elfvers/vers32c.ver: Delete.
	* ld-elfvers/vers32d.ver: Delete.
	* ld-elfvers/vers.exp: Don't run them.

2010-11-03  Nick Clifton  <nickc@redhat.com>

	PR ld/12001
	* ld-script/default-script2.d: Fix expected address for text
	section.

2010-11-02  Joseph Myers  <joseph@codesourcery.com>

	* ld-tic6x/attr-array-16-16.d, ld-tic6x/attr-array-16-4.d,
	ld-tic6x/attr-array-16-416.d, ld-tic6x/attr-array-16-48.d,
	ld-tic6x/attr-array-16-8.d, ld-tic6x/attr-array-16-816.d,
	ld-tic6x/attr-array-16.s, ld-tic6x/attr-array-4-16.d,
	ld-tic6x/attr-array-4-4.d, ld-tic6x/attr-array-4-416.d,
	ld-tic6x/attr-array-4-48.d, ld-tic6x/attr-array-4-8.d,
	ld-tic6x/attr-array-4-816.d, ld-tic6x/attr-array-4.s,
	ld-tic6x/attr-array-416-16.d, ld-tic6x/attr-array-416-4.d,
	ld-tic6x/attr-array-416-416.d, ld-tic6x/attr-array-416-48.d,
	ld-tic6x/attr-array-416-8.d, ld-tic6x/attr-array-416-816.d,
	ld-tic6x/attr-array-416.s, ld-tic6x/attr-array-48-16.d,
	ld-tic6x/attr-array-48-4.d, ld-tic6x/attr-array-48-416.d,
	ld-tic6x/attr-array-48-48.d, ld-tic6x/attr-array-48-8.d,
	ld-tic6x/attr-array-48-816.d, ld-tic6x/attr-array-48.s,
	ld-tic6x/attr-array-8-16.d, ld-tic6x/attr-array-8-4.d,