@@ -97,23 +97,8 @@ test_gc "Check --gc-section/-r/-u" "gcrel" $ld "-r --gc-sections -u used_func"
 run_dump_test "noent"
 run_dump_test "abi-note"
 run_dump_test "start"
-
-if { [is_elf_format] && [check_shared_lib_support] } then {
-    set gasopt ""
-    if { [istarget tic6x-*] } then {
-	set gasopt "-mpic -mpid=near"
-    }
-    if {![ld_assemble_flags $as $gasopt $srcdir/$subdir/libpersonality.s tmpdir/libpersonality.o]
-	|| ![ld_simple_link $ld tmpdir/libpersonality.so "-shared tmpdir/libpersonality.o"] } then {
-	fail libpersonality
-    } else {
-	run_dump_test "personality"
-    }
-}
-
 if { [is_remote host] || [which $CC] != 0 } {
-    if { [istarget "*-*-linux*"]
-	 || [istarget "*-*-gnu*"] } {
+    if { [istarget "*-*-linux*"] } {
 	ld_compile "$CC -fPIC $CFLAGS $cflags" $srcdir/$subdir/pr11218-1.c tmpdir/pr11218-1.o
 	ld_simple_link $ld tmpdir/pr11218-1.so "-shared tmpdir/pr11218-1.o"
  	ld_compile "$CC -c $CFLAGS $cflags" $srcdir/$subdir/pr11218-2.c tmpdir/pr11218-2.o
