@@ -1,6 +1,6 @@
 # Test linking directly to S-records.
 # By Ian Lance Taylor, Cygnus Support.
-#   Copyright 1999, 2000, 2001, 2002, 2003, 2005, 2006, 2007, 2009, 2011
+#   Copyright 1999, 2000, 2001, 2002, 2003, 2005, 2006, 2007, 2009
 #   Free Software Foundation, Inc.
 #
 # This file is part of the GNU Binutils.
@@ -250,10 +250,15 @@ proc run_srec_test { test objs } {
 	setup_xfail "sh64*-*-*"
     }
 
-    if {[istarget arm*-*-*]} {
+    if {[istarget arm*-*-*]       || \
+        [istarget strongarm*-*-*] || \
+        [istarget xscale*-*-*]    || \
+        [istarget thumb-*-*] } {
         # ARM targets cannot convert format in the linker 
         # using the --oformat command line switch
-	setup_xfail "arm*-*-*"
+	setup_xfail "*arm*-*-*"
+	setup_xfail "xscale-*-*"
+	setup_xfail "thumb-*-*"
     }
 
     # V850 targets need libgcc.a
@@ -268,12 +273,6 @@ proc run_srec_test { test objs } {
 
     if [istarget powerpc64*-*-*] {
 	set flags "$flags --no-toc-optimize"
-    }
-
-    # Epiphany needs some help too
-    if [istarget epiphany*-*-*] {
-	set flags "$flags --defsym _start=00000060"
-	setup_xfail "epiphany*-*-*"
     }
 
     if { ![ld_simple_link $ld tmpdir/sr1 "$flags $objs"] \
@@ -343,8 +342,13 @@ setup_xfail "*-*-aix*" "*-*-xcoff*"
 
 # The S-record linker doesn't build ARM/Thumb stubs.
 setup_xfail "arm-*-coff"
+setup_xfail "strongarm*-*-coff"
+setup_xfail "xscale*-*-coff"
 setup_xfail "arm-*-pe*"
 # setup_xfail "arm-*elf*"
+setup_xfail "thumb-*-coff*"
+setup_xfail "thumb-*-pe*"
+setup_xfail "thumb-*-elf*"
 setup_xfail "arm*-*-linux*"
 
 # The S-record linker doesn't include the .{zda} sections.
@@ -370,13 +374,6 @@ setup_xfail "score-*-*"
 # The S-record linker doesn't support Blackfin ELF FDPIC ABI.
 setup_xfail "bfin-*-linux-uclibc"
 
-# On tile, we appear to be getting some random-seeming zeroing or 24-bit
-# rightshifts (!) in the output when directly generating S-records from
-# the linker.  Not clear what could be causing this but we don't
-# anticipate creating s-records (and could always use objcopy to
-# generate the format if need be).
-setup_xfail "tile*-*-*"
-
 run_srec_test $test1 "tmpdir/sr1.o tmpdir/sr2.o"
 
 # Now try linking a C++ program with global constructors and
@@ -398,6 +395,8 @@ setup_xfail "i*86-*-aout*"
 setup_xfail "mips*-*-irix5*" "mips*-*-irix6*" "mips*-*-linux*"
 setup_xfail "*-*-aix*" "*-*-xcoff*"
 setup_xfail "arm*-*-*"
+setup_xfail "strongarm*-*-*"
+setup_xfail "thumb-*-*"
 setup_xfail "v850*-*-elf"
 setup_xfail "alpha*-*-elf*" "alpha*-*-linux-*" "alpha*-*-gnu*"
 setup_xfail "alpha*-*-netbsd*"
@@ -406,6 +405,5 @@ setup_xfail "ia64-*-*"
 setup_xfail "*-*-cygwin*" "*-*-mingw*" "*-*-pe*" "*-*-winnt*"
 setup_xfail "score-*-*"
 setup_xfail "bfin-*-linux-uclibc"
-setup_xfail "tile*-*-*"
 
 run_srec_test $test2 "tmpdir/sr3.o"
